add webpack and hot-module-reloader

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "rwb serve"
+    "start": "node server.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -22,15 +23,21 @@
   },
   "homepage": "https://github.com/GasStationTV/react-coding-exercise#readme",
   "dependencies": {
-    "react": "0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^0.14.8",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
-    "react-router": "2.0.1"
+    "react-hot-loader": "^1.3.0",
+    "react-router": "2.0.1",
+    "redux-devtools": "^3.2.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   },
   "react": {
     "routes": "./routes.js",
