--- a/package.json
+++ b/package.json
@@ -33,6 +33,18 @@
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
+    "babel-core": "^5.6.18",
+    "babel-loader": "^5.1.4",
+    "babel-plugin-react-transform": "^1.1.0",
+    "concurrently": "^0.1.1",
+    "express": "^4.13.3",
+    "react-transform-hmr": "^1.0.0",
+    "redux-devtools": "^3.0.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0",
     "babel-eslint": "^6.0.2",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
