--- a/package.json
+++ b/package.json
@@ -34,26 +34,26 @@
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
     "concurrently": "^0.1.1",
-    "express": "^4.13.3",
-    "react-transform-hmr": "^1.0.0",
-    "redux-devtools": "^3.0.0",
-    "redux-devtools-dock-monitor": "^1.0.1",
-    "redux-devtools-log-monitor": "^1.0.1",
-    "webpack": "^1.9.11",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0",
-    "babel-eslint": "^6.0.2",
+    "css-loader": "^0.23.1",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "express": "^4.13.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "2.0.1",
+    "react-transform-hmr": "^1.0.0",
     "redux-devtools": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
+    "sass-loader": "^3.2.0",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.2.0"
   },
   "react": {
     "routes": "./routes.js",
