--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/GasStationTV/react-coding-exercise#readme",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^2.2.2",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
@@ -37,6 +38,7 @@
     "babel-eslint": "^6.0.2",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
+    "bootstrap-webpack": "0.0.5",
     "concurrently": "^0.1.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.5.3",
