--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/GasStationTV/react-coding-exercise#readme",
   "dependencies": {
+    "bluebird": "^3.3.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.2",
+    "q": "^1.4.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
