add loading bar

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/GasStationTV/react-coding-exercise#readme",
   "dependencies": {
     "bluebird": "^3.3.4",
+    "classnames": "^2.2.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.2",
     "q": "^1.4.1",
