--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
     "express": "^4.13.3",
+    "file-loader": "^0.11.2",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "2.0.1",
     "react-transform-hmr": "^1.0.0",
@@ -55,6 +57,8 @@
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
     "sass-loader": "^3.2.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.14.1",
